objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>EBQ_Cadence__c</fullName>
        <label>EBQ Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Completed__c</fullName>
        <label>EBQ Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Connected__c</fullName>
        <label>EBQ Connected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Cycle__c</fullName>
        <formula>EBQ_Completed__c - EBQ_First_Touch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBQ Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBQ_First_Touch__c</fullName>
        <label>EBQ First Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBQ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBQ_Set__c</fullName>
        <label>EBQ Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Touches__c</fullName>
        <formula>CASE( EBQ_Cadence__c,
&quot;A1&quot;, 1,
&quot;A2&quot;, 2,
&quot;A3&quot;, 3,
&quot;A4&quot;, 4,
&quot;A5&quot;, 5,
&quot;B1&quot;, 6,
&quot;B2&quot;, 7,
&quot;B3&quot;, 8,
&quot;B4&quot;, 9,
&quot;B5&quot;, 10,
&quot;C1&quot;, 11,
&quot;C2&quot;, 12,
&quot;C3&quot;, 13,
&quot;C4&quot;, 14,
&quot;C5&quot;, 15,
&quot;D1&quot;, 16,
&quot;D2&quot;, 17,
&quot;D3&quot;, 18,
&quot;D4&quot;, 19,
&quot;D5&quot;, 20,
&quot;E1&quot;, 21,
&quot;E2&quot;, 22,
&quot;E3&quot;, 23,
&quot;E4&quot;, 24,
&quot;E5&quot;, 25,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBQ Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <formula>TEXT( Account.Entity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <description>Determine the level of effort (LOE) or staff needed on the project.</description>
        <inlineHelpText>Insert the number of engineers required.</inlineHelpText>
        <label>Estimated LOE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpansionOppWarningLeadSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exp Opp Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expansion_ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the ACV amount from products added on to a Renewal Opp or just the products added on an Expansion Opp</description>
        <inlineHelpText>The sum of the ACV from quote lines added to a Renewal Opp, or sum of the ACV from all quote lines for an Expansion Opp. Populated automatically from related Primary Quote.</inlineHelpText>
        <label>Expansion ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_ARR__c</fullName>
        <formula>ARR__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR * probability to give us the expected value for forecasting purposes.</inlineHelpText>
        <label>Expected ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_MRR__c</fullName>
        <formula>MRR__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MRR x probability to give us the expected value for forecasting</inlineHelpText>
        <label>Expected MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Demo_Date__c</fullName>
        <label>First Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Email_Received__c</fullName>
        <label>First Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Sent__c</fullName>
        <label>First Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH(  CloseDate ), 2, &quot;Q1&quot; , 3, &quot;Q1&quot;, 4, &quot;Q1&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q2&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, 10, &quot;Q3&quot;, 11, &quot;Q4&quot;, 12, &quot;Q4&quot;, 1, &quot;Q4&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category_Rep__c</fullName>
        <description>Copado business process for forecast category should not map to Opportunity Stages like the standard Forecast Category field.(Approved by Andrew Thompson). This field is used for forecasting determined by individual reps.</description>
        <label>Forecast Category Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                    <default>true</default>
                    <label>Commit</label>
                </value>
                <value>
                    <fullName>Best case</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecasted_Revenue_Growth__c</fullName>
        <description>Forecasted Revenue Growth used for renewal opportunities to track forecasted revenue growth</description>
        <formula>((ACV__c-SRB__c)/SRB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this field to track the forecasted review growth for renewal opportunities</inlineHelpText>
        <label>Forecasted Revenue Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Tracking ID</description>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gong__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__Gong_Count__c</fullName>
        <description>Auto computed field that is used in reports for aggregations.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto computed field that is used in reports for aggregations.</inlineHelpText>
        <label>Gong Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the partner that will be performing the implementation. Please choose Copado if we are doing the implementation and leave blank if no implementation.</inlineHelpText>
        <label>Implementation Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Implementation Partner)</relationshipLabel>
        <relationshipName>ImplementationPartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://www.getfeedback.com/r/3khjwWFy?Opportunity_ID=&quot;&amp;Id&amp;&quot;&amp;Opportunity_Account_ID=&quot;&amp;AccountId,&quot;Click Here&quot;)</formula>
        <label>Implementation Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Survey_Status__c</fullName>
        <label>Implementation Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Implementation_Survey_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incremental_ACV__c</fullName>
        <formula>ACV__c -  Renewal_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:

ACV - Renewal ACV</inlineHelpText>
        <label>Incremental ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InfoSec_Status__c</fullName>
        <label>InfoSec Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress - Prospect</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <label>In Progress - Copado</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCreatedToday__c</fullName>
        <description>This field is used in scheduled flow &apos;Chatter to Renewal Opp Owner within 120 days of new Opportunity creation&apos; to get all the renewal Opp records created today.</description>
        <formula>DATEVALUE(CreatedDate) = TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCreatedToday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Relationship__c</fullName>
        <description>Name of the person responsible for the key relationship.</description>
        <label>Key Relationship</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_In__c</fullName>
        <label>Last Call In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Out__c</fullName>
        <label>Last Call Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_SE_Meeting__c</fullName>
        <description>Date indicates the last time an SE met with the prospect related to an opportunity. Is filled in by a process builder.</description>
        <label>Last SE Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Trial_Meeting__c</fullName>
        <description>The data for this field is pulled from the s&quot;Sub-Type&quot; field on the most recent meeting record that is of the &quot;Trial Meeting&quot; type.</description>
        <label>Latest Trial Meeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to give a granular look at our EBQ campaigns for each lead source and across both leads and contacts.</description>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Data__c</fullName>
        <description>This field will be used for Distinguishing Migrated Legacy Data from acquisition</description>
        <label>Legacy Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Context</fullName>
                </value>
                <value>
                    <fullName>Qentinel</fullName>
                </value>
                <value>
                    <fullName>Qualibrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>This Field will be used for Distinguishing Legacy Data Migrated from Acquisition and store the record id of the legacy system for traceability purposes.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress  - Prospect</fullName>
                    <label>In Progress - Prospect</label>
                </value>
                <value>
                    <fullName>In Progress - Copado</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <inlineHelpText>A more in-depth explanation why the deal was Lost.</inlineHelpText>
        <label>Lost Reason Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail_picklist__c</fullName>
        <label>Lost Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lost_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad fit</fullName>
                </value>
                <value>
                    <fullName>Ease of use</fullName>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Implementation Issues</fullName>
                </value>
                <value>
                    <fullName>Out of business</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Autorabit</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Build vs. Buy</fullName>
                </value>
                <value>
                    <fullName>ClickDeploy</fullName>
                </value>
                <value>
                    <fullName>Stretch fit</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Renew</fullName>
                </value>
                <value>
                    <fullName>AcelQ</fullName>
                </value>
                <value>
                    <fullName>Amplify DX</fullName>
                </value>
                <value>
                    <fullName>Blue Canvas</fullName>
                </value>
                <value>
                    <fullName>DevOps Center</fullName>
                </value>
                <value>
                    <fullName>Eggplant</fullName>
                </value>
                <value>
                    <fullName>Home Grown</fullName>
                </value>
                <value>
                    <fullName>Leapwork</fullName>
                </value>
                <value>
                    <fullName>Metazoa</fullName>
                </value>
                <value>
                    <fullName>Metazoa Snapshot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prodly</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Ranorex</fullName>
                </value>
                <value>
                    <fullName>Robot Framework</fullName>
                </value>
                <value>
                    <fullName>Salesforce DX</fullName>
                </value>
                <value>
                    <fullName>Saucelabs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>CopadoEssentials</fullName>
                    <label>Copado Essentials</label>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Duplicate/replace by another Opp</fullName>
                </value>
                <value>
                    <fullName>Economical</fullName>
                </value>
                <value>
                    <fullName>Lead Pass</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFJ__c</fullName>
        <inlineHelpText>Manager Forecast Judgement helps sales managers forecast. In = Commit, Out = Not in this month, Up = Best Case</inlineHelpText>
        <label>MFJ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSA_Redlines_Expected_Date__c</fullName>
        <label>MSA Redlines Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Source__c</fullName>
        <label>MSA Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado paper</fullName>
                </value>
                <value>
                    <fullName>Customer paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Problems__c</fullName>
        <inlineHelpText>A brief description of current problems faced.</inlineHelpText>
        <label>Main Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Major_Risks__c</fullName>
        <inlineHelpText>Why wouldn&apos;t this prospect buy from us?</inlineHelpText>
        <label>Major Risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Notes__c</fullName>
        <label>BDR Manager Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Marekting_Pipe__c</fullName>
        <formula>IF( ACV__c  &gt; 1, ACV__c ,  Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mutual_Plan__c</fullName>
        <inlineHelpText>Outline agreed mutual plan with dates and steps</inlineHelpText>
        <label>Mutual Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_DateTime__c</fullName>
        <label>My DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Geolocation__c</fullName>
        <label>My Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NCS_Weighted_Opp_Value__c</fullName>
        <description>This Field is Created For New Context Data Migration</description>
        <formula>Amount  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Weighted Opp Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check once NDA or MNDA is executed.</description>
        <label>NDA Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <description>Provides information on when the when the next contact date is.</description>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <description>This field is not in use, please refer to the &quot;Company Size&quot; picklist field instead</description>
        <inlineHelpText>This field is not in use, please refer to the &quot;Company Size&quot; picklist field instead</inlineHelpText>
        <label>No. of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Orgs__c</fullName>
        <description>Number of orgs in the production environment.</description>
        <inlineHelpText>Number of orgs in the production environment.</inlineHelpText>
        <label>No. of Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Standard_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Non_Standard_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <formula>Text( Account.NumberOfEmployees )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Employees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__CLOSED_ACTIVITIES__c</fullName>
        <label>Closed Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__OPEN_ACTIVITIES__c</fullName>
        <label>Open Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_time_Product_Discount__c</fullName>
        <label>One-time Product Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_time_Product_Discounts__c</fullName>
        <formula>1 -  SBQQ__PrimaryQuote__r.Total_One_Time_Product_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Creation_Role__c</fullName>
        <label>Opportunity Creation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_s_Manager__c</fullName>
        <formula>Owner.Manager.FirstName  + &quot; &quot; +  Owner.Manager.LastName</formula>
        <label>Opportunity Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <label>Opportunity Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>